syntax = "proto3";

service AppointmentService {
  rpc FindAllAppointments (AppointmentByDoctorId) returns (AppointmentList);
  rpc FindAvailableAppointments (AppointmentByDoctorId) returns (AppointmentList);
  rpc CreateAppointment (AvailableAppointment) returns (AvailableAppointment);
}

message AppointmentByDoctorId {
  string params = 1;
}

message AvailableAppointment {
  int32 id = 1;
  string payload = 2;
}

message AppointmentList {
  repeated AvailableAppointment appointments = 1;
}
