syntax = "proto3";

package appointment;

service AppointmentService {
  rpc FindAvailableAppointments (AppointmentByDoctorId) returns (AppointmentArray);
  rpc CreateAppointment (AvailableAppointment) returns (AvailableAppointment);
}

message AppointmentByDoctorId {
  string doctorId = 1;
  string startDate = 2;
  string endDate = 3;
}

message AvailableAppointment {
  optional string doctorId = 1;
  optional string doctorData = 2;
  optional string userId = 3;
  optional string userdata = 4;
  optional string startTime = 5;
  optional string appointmentTime = 6;
  optional string companyId = 7;
  optional string id = 8;
}

message AppointmentArray {
  repeated AvailableAppointment appointments = 1;
}
